--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "knex": "^3.1.0",
+    "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
     "objection": "^3.1.4",
     "sqlite3": "^5.1.7"
