--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "axios": "^1.7.5",
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
+    "json-bigint": "^1.0.0",
     "knex": "^3.1.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.11.0",
+    "nodemailer": "^6.9.16",
     "objection": "^3.1.4",
     "sqlite3": "^5.1.7"
   }
